Ignore key repeat in Overview and Grid shortcuts

This commit prevents full-screen flickering when holding
the Overview and Grid toggle shortcuts.

BUG: 483789
Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>